# CodeThief

./: CodeThief.cabal  LICENSE  README.md
src/: File.hs  Git.hs  Main.hs
